Minor update: Default Profiles added
Profiles are added for Pilsner Urquell, Weizen, Tripel and IPA. Also:
default hysteresis is set to 0.5 Celsius instead of 5 Celsius.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Compiler files
+*.o
+*.i
+*.map
+
 # =========================
 # Operating System Files
 # =========================
